[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledgermem-langgraph"
version = "0.1.0"
description = "LangGraph BaseStore implementation backed by LedgerMem for cross-thread agent memory."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "LedgerMem", email = "founders@proofly.dev" }]
keywords = ["ledgermem", "langgraph", "memory", "store", "agents", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "ledgermem>=0.1",
  "langgraph>=0.2",
  "langgraph-checkpoint>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/ledgermem/ledgermem-langgraph"
Issues = "https://github.com/ledgermem/ledgermem-langgraph/issues"
Source = "https://github.com/ledgermem/ledgermem-langgraph"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_ledgermem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
